--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Netflow-Parser
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.01    2014.12.23
+        First release supports v9
 
