--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Netflow-Parser
 
+0.02    2014.12.29
+        bug fixing _parse_flowset_v9
+        refactoring: parse method returns a Netflow::Parser::Packet object
+
 0.01    2014.12.23
         First release supports v9
-
