--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for Netflow-Parser
         add briefly ABSTRACT description
         bug parse_template_v9 fixed
         bug in add_template fixed
+        add 01-run.t to MANIFEST
 
 0.02    2014.12.29
         bug fixing _parse_flowset_v9
